--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,8 @@ matrix:
         - os: linux
           language: python
           python: 3.3
-        - os: osx
-          language: generic
+        # - os: osx
+        #   language: generic
 
 
 before_install:
