--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ env:
 # https://docs.travis-ci.com/user/multi-os/#Python-example-(unsupported-languages)
 matrix:
     include:
-        - os: linux
+        - os: osx
           language: python
           python: 3.4
         # - os: osx
