--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ matrix:
     include:
         - os: linux
           language: python
-          python: 3.4
+          python: '3.6'
         # - os: osx
         #   language: generic
 
