Update release github action

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,16 +1,18 @@
 name: Bump Version
 on:
   push:
-    branches: ["main"]
+    branches: ["master"]
 jobs:
   tag:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - name: Bump version and push tag
         id: tag_version
-        uses: mathieudutour/github-tag-action@v5.2
+        uses: mathieudutour/github-tag-action@v6
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          default_bump: "minor"
       - name: Create a GitHub release
         uses: actions/create-release@v1
         env:
