Manual workflow trigger to create a release

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,6 +2,9 @@ name: Bump Version
 on:
   push:
     branches: ["master"]
+  workflow_dispatch:
+    inputs: {}
+    
 jobs:
   tag:
     runs-on: ubuntu-latest
